--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -7,9 +7,9 @@
 .hero__inner {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 3rem;
+  gap: 4rem;
   align-items: center;
-  padding-top: 6rem;
+  padding-top: 8rem;
   padding-bottom: 6rem;
 }
 
@@ -52,16 +52,16 @@
 
 .hero__image {
   width: 100%;
-  aspect-ratio: 4 / 3;
+  height: 100%;
   object-fit: cover;
   display: block;
 }
 
 @media (min-width: 768px) {
   .hero__inner {
-    padding-top: 8rem;
+    padding-top: 10rem;
     padding-bottom: 8rem;
-    gap: 3rem;
+    gap: 4rem;
   }
 }
 
